stryker/Metadata/unpackaged/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Ammount__c</fullName>
        <label>Ammount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>payment</relationshipLabel>
        <relationshipName>payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>